--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #f5f5f5;
 }
 
+/* Dark mode background color */
+body.dark-mode {
+    background-color: #333;
+}
 h1 {
     font-size: 3em;
     letter-spacing: .1em;
@@ -13,18 +17,33 @@ h1 {
     color: #333;
 }
 
+h1.dark-mode {
+    font-size: 3em;
+    letter-spacing: .1em;
+    padding: 1em 0;
+    color: white;
+}
+
 h2 {
     font-size: 1.8em;
     padding: 1em 0;
     color: #333;
 }
-
+h2.dark-mode {
+    font-size: 1.8em;
+    padding: 1em 0;
+    color: white;
+}
 h3 {
     font-size: 1.5em;
     padding: 1em 0;
     color: #555;
 }
-
+h3.dark-mode {
+    font-size: 1.5em;
+    padding: 1em 0;
+    color: white;
+}
 main {
     display: grid;
     grid-template-columns: 40% 60%;
@@ -49,7 +68,10 @@ p {
     margin: .2em auto;
     color: #666;
 }
-
+p.dark-mode {
+    margin: .2em auto;
+    color: white;
+}
 hr {
     border: none;
     background-color: #dcdcdc;
