--- a/style.css
+++ b/style.css
@@ -1,158 +1,162 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    max-width: 960px;
-    margin: auto;
-    background-color: #f5f5f5;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  max-width: 960px;
+  margin: auto;
+  background-color: #f5f5f5;
 }
 
 /* Dark mode background color */
 body.dark-mode {
-    background-color: #333;
+  background-color: #333;
 }
 h1 {
-    font-size: 3em;
-    letter-spacing: .1em;
-    padding: 1em 0;
-    color: #333;
+  font-size: 3em;
+  letter-spacing: 0.1em;
+  padding: 1em 0;
+  color: #333;
 }
 
 body.dark-mode h1 {
-    font-size: 3em;
-    letter-spacing: .1em;
-    padding: 1em 0;
-    color: white;
+  font-size: 3em;
+  letter-spacing: 0.1em;
+  padding: 1em 0;
+  color: white;
 }
 
 h2 {
-    font-size: 1.8em;
-    padding: 1em 0;
-    color: #333;
+  font-size: 1.8em;
+  padding: 1em 0;
+  color: #333;
 }
 body.dark-mode h2 {
-    font-size: 1.8em;
-    padding: 1em 0;
-    color: white;
+  font-size: 1.8em;
+  padding: 1em 0;
+  color: white;
 }
 h3 {
-    font-size: 1.5em;
-    padding: 1em 0;
-    color: #555;
+  font-size: 1.5em;
+  color: #555;
 }
 body.dark-mode h3 {
-    font-size: 1.5em;
-    padding: 1em 0;
-    color: white;
+  font-size: 1.5em;
+  color: white;
 }
 main {
-    display: grid;
-    grid-template-columns: 40% 60%;
-    margin-top: 2em;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  margin-top: 2em;
 }
 
 header {
-    text-align: center;
-    margin: auto 1em;
+  text-align: center;
+  margin: auto 1em;
 }
 
 i {
-    margin-right: .5em;
-    color: #007BFF;
+  margin-right: 0.5em;
+  color: #007bff;
 }
 
-body.dark-mode li{color: white;}
+body.dark-mode li {
+  color: white;
+}
 
 section {
-    margin: auto 1em 3em 2em;
+  margin: auto 1em 3em 2em;
 }
 
 i {
-    margin-right: .5em;
-    color: #007BFF;
+  margin-right: 0.5em;
+  color: #007bff;
 }
 
 p {
-    margin: .2em auto;
-    color: #666;
+  margin: 0.2em auto;
+  color: #666;
 }
 body.dark-mode p {
-    margin: .2em auto;
-    color: white;
+  margin: 0.2em auto;
+  color: white;
 }
 hr {
-    border: none;
-    background-color: #dcdcdc;
-    height: 1px;
+  border: none;
+  background-color: #dcdcdc;
+  height: 1px;
 }
 
-h1, h2, h3 {
-    font-weight: 300;
-    margin-bottom: 0;
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  margin-bottom: 0;
 }
 
 #mainLeft {
-    border-right: 1px solid #dcdcdc;
+  border-right: 1px solid #dcdcdc;
 }
 
 .project-link {
-    color: #007BFF;
-    text-decoration: none;
-    transition: color 0.3s;
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s;
 }
 
 .project-link:hover {
-    color: #0056b3;
+  color: #0056b3;
 }
 body.dark-mode .project-link {
-    color: #12b300;
-    text-decoration: none;
-    transition: color 0.3s;
+  color: #12b300;
+  text-decoration: none;
+  transition: color 0.3s;
 }
 
 body.dark-mode .project-link:hover {
-    color: #12b300;
+  color: #12b300;
 }
 /* Dark Mode Toggle Styles */
 .dark-mode-toggle {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dark-mode-toggle input[type="checkbox"] {
-    display: none;
-  }
-  
-  .dark-mode-toggle label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px; /* Adjust width as needed */
-    height: 25px; /* Adjust height as needed */
-    background-color: #ccc;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .dark-mode-toggle label::before {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    left: 0;
-    top: 0;
-    background-color: #fff; /* Default color for the button */
-    transition: transform 0.3s;
-  }
-  
-  /* Dark Mode Styling */
-  .dark-mode-toggle input[type="checkbox"]:checked + label {
-    background-color: #333; /* Dark mode background color */
-  }
-  
-  .dark-mode-toggle input[type="checkbox"]:checked + label::before {
-    transform: translateX(25px); /* Move the button to the right for dark mode */
-  }
-  
-body.dark-mode a{color: #12b300;;}
+  position: relative;
+  display: inline-block;
+}
+
+.dark-mode-toggle input[type="checkbox"] {
+  display: none;
+}
+
+.dark-mode-toggle label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px; /* Adjust width as needed */
+  height: 25px; /* Adjust height as needed */
+  background-color: #ccc;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.dark-mode-toggle label::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  background-color: #fff; /* Default color for the button */
+  transition: transform 0.3s;
+}
+
+/* Dark Mode Styling */
+.dark-mode-toggle input[type="checkbox"]:checked + label {
+  background-color: #333; /* Dark mode background color */
+}
+
+.dark-mode-toggle input[type="checkbox"]:checked + label::before {
+  transform: translateX(25px); /* Move the button to the right for dark mode */
+}
+
+body.dark-mode a {
+  color: #12b300;
+}
